--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Leafy - Fruits And Vegetables</string>
-    <string name="app_tag_line">Eat Frest, Live Better.</string>
+    <string name="app_tag_line">Eat Fresh, Live Better.</string>
 
     <string name="title_about">About</string>
     <string name="content_about">Markeet is an online store that sells various types of products, such as clothes, mobile phones, home appliances, and other products. Excellent product quality and competitive prices.
