--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
-    <string name="app_name">Leafy - Fruits And Vegetables</string>
-    <string name="app_tag_line">Eat Fresh, Live Better.</string>
+    <string name="app_name">Leafy</string>
+    <string name="app_tag_line">Fruits And Vegetables\nEat Fresh, Live Better.</string>
 
     <string name="title_about">About</string>
-    <string name="content_about">Markeet is an online store that sells various types of products, such as clothes, mobile phones, home appliances, and other products. Excellent product quality and competitive prices.
-        \n\nThis application is just a demo of the items on Envato</string>
+    <string name="content_about">Leafy is an online store that sells various types of fruits, and vegetables.\n We provide excellent product quality and competitive prices.\n\nMobile : 923155186150</string>
 
     <string name="title_activity_news_info">News Info</string>
     <string name="title_activity_notifications">Notifications</string>
@@ -15,7 +14,7 @@
     <string name="title_activity_settings">Settings</string>
 
     <!--ADS UNIT ID  -->
-    <string name="interstitial_ad_unit_id">ca-app-pub-1089834084168106/5818811461</string>
+    <string name="interstitial_ad_unit_id">ca-app-pub-1089834084168106~76465432301</string>
     <string name="banner_ad_unit_id">ca-app-pub-1089834084168106/5968637662</string>
 
     <!--All data for ActivityMain.java -->
@@ -48,8 +47,8 @@
     <string name="remove_wishlist">Remove from wishlist</string>
     <string name="add_cart"> Added To Cart</string>
     <string name="remove_cart">Remove from shopping cart</string>
-    <string name="msg_out_of_stock">Ops, Product out of stock</string>
-    <string name="msg_suspend">Ops, Product is suspend</string>
+    <string name="msg_out_of_stock">Oops, Product out of stock</string>
+    <string name="msg_suspend">Oops, Product is suspend</string>
     <string name="out_of_stock">OUT OF STOCK</string>
     <string name="suspend">SUSPEND</string>
     <string name="ready_stock">READY STOCK</string>
@@ -58,17 +57,15 @@
     <string name="bt_check_out">CHECKOUT</string>>
 
     <!--All data for ActivitySplash.java -->
-    <string name="title_unable_connect">Unable connect to server</string>
+    <string name="title_unable_connect">Unable to connect to server</string>
     <string name="msg_unable_connect">Server temporary down or under maintenance</string>
     <string name="msg_app_out_date">Application is out of date, please update to get latest version</string>
-    <string name="msg_no_internet">Please check your Internet connection and try again</string>
+    <string name="msg_no_internet">Please check your internet connection and try again</string>
     <string name="title_info">Information</string>
     <string name="title_no_internet">No Internet Connection</string>
 
-
-
     <!--All data for ActivityShoppingCart.java -->
-    <string name="msg_cart_empty">Shopping Cart is empty</string>
+    <string name="msg_cart_empty">Shopping cart is empty</string>
     <string name="before_tax">( Before tax )</string>
     <string name="total">Total&#160;</string>
     <string name="stock">Stock : &#160;</string>
@@ -79,12 +76,12 @@
     <!--All data for ActivitySearch.java -->
     <string name="ALL">ALL</string>
     <string name="Category">Category :&#160;</string>
-    <string name="hint_input_search">Search input</string>
+    <string name="hint_input_search">Enter fruit or vegetable name</string>
     <string name="please_fill">Please Fill Search Input</string>
 
     <!--All data for ActivityOrderHistory.java -->
-    <string name="msg_history_empty">Order History is empty</string>
-    <string name="title_history_details">Order History Details</string>
+    <string name="msg_history_empty">Order history is empty</string>
+    <string name="title_history_details">Order history details</string>
 
     <!--All data for ActivityNotification.java -->
     <string name="msg_notif_empty">Notification is empty</string>
@@ -98,40 +95,40 @@
     <string name="hint_name">Name</string>
     <string name="hint_email">Email</string>
     <string name="hint_phone">Phone</string>
-    <string name="hint_address">Address (House# ,Street#)</string>
+    <string name="hint_address">Address (House# 123,Street# 123, Road ABC)</string>
     <string name="hint_shipping">Shipping</string>
     <string name="choose_shipping">Choose Area</string>
     <string name="hint_date_ship">Date Shipping</string>
     <string name="hint_comment">Comment (Optional)</string>
     <string name="product_order_list">Product Order List</string>
 
-    <string name="invalid_name">invalid name</string>
-    <string name="invalid_email">invalid email</string>
-    <string name="invalid_phone">invalid phone</string>
-    <string name="invalid_address">invalid address</string>
-    <string name="invalid_shipping">invalid Area</string>
-    <string name="invalid_date_ship">invalid date shipping</string>
-    <string name="invalid_comment">invalid comment</string>
+    <string name="invalid_name">Invalid name</string>
+    <string name="invalid_email">Invalid email</string>
+    <string name="invalid_phone">Invalid phone</string>
+    <string name="invalid_address">Invalid address</string>
+    <string name="invalid_shipping">Invalid area</string>
+    <string name="invalid_date_ship">Invalid date shipping</string>
+    <string name="invalid_comment">Invalid comment</string>
 
-    <string name="title_please_wait">Please Wait</string>
-    <string name="content_submit_checkout">Submit Checkout&#8230;</string>
+    <string name="title_please_wait">Please wait</string>
+    <string name="content_submit_checkout">Submit checkout&#8230;</string>
     <string name="confirmation">Confirmation</string>
     <string name="confirm_checkout">Are you sure want to checkout this order?</string>
     <string name="failed_checkout">
         Oops, Failed when checkout order
-        \n\nMake sure you have internet connection, or if you need help please Contact Us from menu Settings
+        \n\nMake sure you have internet connection, or if you need help please contact us from menu -> settings
     </string>
     <string name="success_checkout">Congratulation</string>
     <string name="msg_success_checkout">
-        Successfully checkout order.\nYour order code : %1$s\n\nYour order will be review soon. When your order is ready, invoice detail will be sent to your email.
+        Successfully checkout order.\nYour order code : %1$s\n\nYour order will be delivered soon.
     </string>
     <string name="process_checkout">ORDER NOW</string>
 
     <!--All data ActivityNewsInfoDetails.java -->
-    <string name="featured">featured</string>
+    <string name="featured">Featured</string>
 
     <!--All data for ActivityDialogNotification.java -->
-    <string name="title_notif_details">Notification Details</string>
+    <string name="title_notif_details">Notification details</string>
     <string name="title_notif">Notification</string>
 
     <!--All data ActivityFullScreenImage.java -->
@@ -147,10 +144,10 @@
     </string-array>
 
     <string-array name="about_description_array">
-        <item>Leafy is Premium Online Shopping\nPlatform for Everyone</item>
-        <item>Search Latest and Featured Product\nWith Best Price</item>
-        <item>Add to Cart All Product You need\nAnd Checkout the Order</item>
-        <item>We Will Verify Your Order\nPay the Bill and Receive the Product</item>
+        <item>Leafy is an online fruites and Vegetables shopping platform.</item>
+        <item>Search is available in both \nurdu and english langugae.</item>
+        <item>Add to cart all fruits and vegetables you need\nAnd checkout the order.</item>
+        <item>We will deliver the order in time.</item>
     </string-array>
 
     <integer-array name="about_images_array">
@@ -162,8 +159,8 @@
 
     <!-- Activity Setting : xml/setting_preference.xml -->
     <string name="app_version">Version</string>
-    <string name="developer_email">dev.dream.space@gmail.com</string>
-    <string name="copyright">Copyright © 2019 Dream Space. \nAll right reserved</string>
+    <string name="developer_email">teamleafy@gmail.com</string>
+    <string name="copyright">Copyright © 2019 Leafy. \nAll right reserved</string>
 
     <string name="pref_group_notif">NOTIFICATIONS</string>
     <string name="pref_group_others">OTHERS</string>
@@ -185,14 +182,13 @@
     </string>
     <string name="version_unknown">Unknown</string>
 
-
     <!-- Other String -->
-    <string name="failed_text">Failed When Load Data</string>
-    <string name="no_internet_text">No Internet Connection</string>
-    <string name="no_item">No Item</string>
+    <string name="failed_text">Failed loading data</string>
+    <string name="no_internet_text">No internet connection</string>
+    <string name="no_item">No item</string>
     <string name="msg_data_loaded">Data loaded</string>
     <string name="msg_failed_load_data">Failed when load data</string>
-    <string name="title_delete_confirm">Delete Confirmation</string>
+    <string name="title_delete_confirm">Delete confirmation</string>
     <string name="content_delete_confirm">Are you sure want to delete all&#160;</string>
     <string name="delete_success">Delete successfully</string>
     <string name="msg_copied_clipboard">Text copied to clipboard</string>
